# budgetize-server

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  quickstart.py  requirements.txt
budgetize_server/: __init__.py  currency_manager.py  data_models.py  main.py  routes.py  utils.py
budgetize_server/database/: __init__.py  models.py
budgetize_server/orm/: _base.py  account.py  transactions.py  user.py
budgetize_server/routers/: account.py  currency.py  user.py
