[tool.poetry]
name = "budgetize-server"
version = "0.1.0"
description = "Budgetize's backend for backing up data and connecting with different APIs."
authors = ["fer-hnndz <65425622+fer-hnndz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.3.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
fastapi = { extras = ["standard"], version = "^0.115.6" }
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
google-auth = "^2.37.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
mypy = "^1.11.1"
pylint = "^3.2.6"
isort = "^5.13.2"
pipenv = "^2024.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
